# sdmx-docs

./: .gitignore  .gitmodules  .markdownlint.json  .prettierrc  README.md  REPOSITORY_MIGRATION_GUIDE.md  VERSION  llms_top.txt  llms_version.txt  mkdocs.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: publish_dev.yaml  publish_dev.yml  publish_prod.yml
3.0/: 404.html  index.html  llms.txt  sitemap.xml
3.0/assets/: style.css
3.0/csv/: index.html
3.0/json/: index.html
3.0/ml/: index.html
3.0/rest_api/: index.html
3.1/: 404.html  index.html  sitemap.xml
3.1/assets/: anchors.js
3.1/csv/: index.html
3.1/json/: index.html
3.1/ml/: index.html
3.1/rest_api/: index.html
docs/: framework.md  index.de.md  index.en.md  index.md
docs/assets/: style.css
docs/framework/: framework-change-history.md  framework-dependencies-on-sdmx-content-oriented-guidelines.md  framework-introduction.md  framework-processes-and-business-scope.md  framework-release-history.md  framework-the-sdmx-information-model.md  framework-the-sdmx-transmission-formats.md  framework-validation-and-transformation-language.md
docs/information_model/: 0_Introduction.md  0_change_history.md  10_ItemSchemeMap.md  11_Constraints.md  12_Data_Provisioning.md  13_Process.md  14_Validation_and_Transformation_Language.md  15_Appendix_1:_A_Short_Guide_to_UML_in_the_SDMX_Information_Model.md  1_Actors_and_Use_Cases.md  2_SDMX_Base_Package.md  3_Specific_Item_Schemes.md  4_Data_Structure_Definition_and_Dataset.md  5_Cube.md  7_Hierarchy.md  8_Structure_Map.md  (+2 more)
(+422 files in other folders)
